force-app/main/default/objects/Column_Dealer_Portal__c/Column_Dealer_Portal__c.object-meta.xml
<CustomObject>
    <label>Column Dealer Portal</label>
    <nameField>
        <label>Column Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Columns Dealer Portal</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>