force-app/main/default/objects/Column_Dealer_Portal__c/fields/Field_Dealer_Portal__c.field-meta.xml
<CustomField>
    <fullName>Field_Dealer_Portal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field Dealer Portal</label>
    <referenceTo>Field_Dealer_Portal__c</referenceTo>
    <relationshipLabel>Columns Dealer Portal</relationshipLabel>
    <relationshipName>Columns_Dealer_Portal</relationshipName>
    <type>Lookup</type>
</CustomField>