force-app/main/default/objects/Column_Dealer_Portal__c/fields/Key_Column__c.field-meta.xml
<CustomField>
    <fullName>Key_Column__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <label>Key Column</label>
    <type>AutoNumber</type>
</CustomField>