force-app/main/default/objects/Column_Dealer_Portal__c/fields/Table_Dealer_Portal__c.field-meta.xml
<CustomField>
    <fullName>Table_Dealer_Portal__c</fullName>
    <label>Table Dealer Portal</label>
    <referenceTo>Table_Dealer_Portal__c</referenceTo>
    <relationshipLabel>Columns Dealer Portal</relationshipLabel>
    <relationshipName>Columns_Dealer_Portal</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>